Some Changes related with Views.

--- a/Quiz.Mvc/Views/Answer/Index.cshtml
+++ b/Quiz.Mvc/Views/Answer/Index.cshtml
@@ -30,4 +30,8 @@
     </tbody>
 </table>
 
-<a asp-action="Create" class="btn btn-primary">Create New Answer</a>
+<div class="text-center">
+    <a asp-action="Create" class="btn btn-primary">Create New Answer</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go To Home</a>
+</div>
+
