--- a/Quiz.Mvc/Views/AnswerType/Index.cshtml
+++ b/Quiz.Mvc/Views/AnswerType/Index.cshtml
@@ -29,4 +29,8 @@
     </tbody>
 </table>
 
-<a asp-action="Create" class="btn btn-primary">Create New Answer Type</a>
+<div class="text-center">
+    <a asp-action="Create" class="btn btn-primary">Create New Answer Type</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go To Home</a>
+</div>
+
