--- a/Quiz.Mvc/Views/QuestionType/Index.cshtml
+++ b/Quiz.Mvc/Views/QuestionType/Index.cshtml
@@ -29,4 +29,7 @@
     </tbody>
 </table>
 
-<a asp-action="Create" class="btn btn-primary">Create New Question Type</a>
+<div class="text-center">
+    <a asp-action="Create" class="btn btn-primary">Create New Question Type</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go To Home</a>
+</div>
