added Onion Architecture implementation.

--- a/Quiz.Mvc/Views/Answer/EditAnswer.cshtml
+++ b/Quiz.Mvc/Views/Answer/EditAnswer.cshtml
@@ -1,4 +1,4 @@
-@model QuizData.Models.Answer
+@model QuizData.Answer
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
