--- a/Quiz.Mvc/Views/AnswerType/Index.cshtml
+++ b/Quiz.Mvc/Views/AnswerType/Index.cshtml
@@ -1,16 +1,17 @@
-@model IEnumerable<QuizData.Models.AnswerType>
+@model IEnumerable<QuizData.AnswerTypeSummary>
 @{
     ViewData["Title"] = "Answer Types";
     Layout = "_Layout";
 }
 <table class="table table-sm table-striped">
     <thead>
-    <tr><th>ID</th><th>Name</th><th>Actions</th></tr>
+    <tr><th>Quiz Name</th><th>Question Type Name</th><th>Answer Type Name</th><th>Actions</th></tr>
     </thead>
     <tbody>
     @foreach (var answerType in Model) {
         <tr>
-            <td>@answerType.QuizID</td>
+            <td>@answerType.QuizName</td>
+            <td>@answerType.QuestionTypeName</td>
             <td>@answerType.AnswerTypeName</td>
             <td>
                 <form asp-action="Delete" method="post">
