--- a/Quiz.Mvc/Views/Question/EditQuestion.cshtml
+++ b/Quiz.Mvc/Views/Question/EditQuestion.cshtml
@@ -1,4 +1,4 @@
-@model QuizData.Models.Question
+@model QuizData.Question
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
