--- a/Quiz.Mvc/Views/QuestionType/EditQuestionType.cshtml
+++ b/Quiz.Mvc/Views/QuestionType/EditQuestionType.cshtml
@@ -1,4 +1,4 @@
-@model QuizData.Models.QuestionType
+@model QuizData.QuestionType
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
