--- a/Quiz.Mvc/Views/Quiz/EditQuiz.cshtml
+++ b/Quiz.Mvc/Views/Quiz/EditQuiz.cshtml
@@ -1,4 +1,4 @@
-@model QuizData.Models.Quiz
+@model QuizData.Quiz
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
