--- a/Quiz.Mvc/Views/Quiz/Index.cshtml
+++ b/Quiz.Mvc/Views/Quiz/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<QuizData.Models.Quiz>
+@model IEnumerable<QuizData.Quiz>
 @{
     ViewData["Title"] = "Quizes";
     Layout = "_Layout";
