--- a/Quiz.Mvc/Views/QuizTheme/EditQuizTheme.cshtml
+++ b/Quiz.Mvc/Views/QuizTheme/EditQuizTheme.cshtml
@@ -1,4 +1,4 @@
-@model QuizData.Models.QuizTheme
+@model QuizData.QuizTheme
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
