--- a/Quiz.Mvc/Views/QuizTheme/Index.cshtml
+++ b/Quiz.Mvc/Views/QuizTheme/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<QuizData.Models.QuizThemeSummary>
+@model IEnumerable<QuizData.QuizThemeSummary>
 @{
     ViewData["Title"] = "Quiz Themes";
     Layout = "_Layout";
