added AutoMapper. added LogService. added Custom Exception handling. changes related with UserController.

--- a/Quiz.Mvc/Views/Home/Index.cshtml
+++ b/Quiz.Mvc/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
             <li><a href="@Url.Action("Index", "AnswerType")">Answer Types</a></li>
             <li><a href="@Url.Action("Index", "Question")">Questions</a></li>
             <li><a href="@Url.Action("Index", "Answer")">Answers</a></li>
+            <li><a href="@Url.Action("Index", "User")">Users</a></li>
         </ul>
     </div>
 </nav>
