--- a/Quiz.Mvc/Views/Home/Index.cshtml
+++ b/Quiz.Mvc/Views/Home/Index.cshtml
@@ -10,7 +10,15 @@
             <li><a href="@Url.Action("Index", "AnswerType")">Answer Types</a></li>
             <li><a href="@Url.Action("Index", "Question")">Questions</a></li>
             <li><a href="@Url.Action("Index", "Answer")">Answers</a></li>
+        </ul>
+        <ul class="nav navbar-nav">
+            <li><a href="@Url.Action("Login", "User")">Log In</a></li>
             <li><a href="@Url.Action("Index", "User")">Users</a></li>
+            <li><a href="@Url.Action("Index", "QuestionType")">Roles</a></li>
+            <li><a href="@Url.Action("Index", "AnswerType")">Rights</a></li>
+            <li><a href="@Url.Action("Index", "Question")">UserRoles</a></li>
+            <li><a href="@Url.Action("Index", "Answer")">UserRights</a></li>
+            <li><a href="@Url.Action("Index", "User")">RoleRights</a></li>
         </ul>
     </div>
 </nav>
