--- a/Quiz.Mvc/Views/Home/Index.cshtml
+++ b/Quiz.Mvc/Views/Home/Index.cshtml
@@ -12,13 +12,19 @@
             <li><a href="@Url.Action("Index", "Answer")">Answers</a></li>
         </ul>
         <ul class="nav navbar-nav">
-            <li><a href="@Url.Action("Login", "User")">Log In</a></li>
             <li><a href="@Url.Action("Index", "User")">Users</a></li>
-            <li><a href="@Url.Action("Index", "QuestionType")">Roles</a></li>
-            <li><a href="@Url.Action("Index", "AnswerType")">Rights</a></li>
-            <li><a href="@Url.Action("Index", "Question")">UserRoles</a></li>
-            <li><a href="@Url.Action("Index", "Answer")">UserRights</a></li>
-            <li><a href="@Url.Action("Index", "User")">RoleRights</a></li>
+            <li><a href="@Url.Action("Index", "Role")">Roles</a></li>
+            <li><a href="@Url.Action("Index", "Right")">Rights</a></li>   
         </ul>
+        <ul class="nav navbar-nav">
+            <li><a href="@Url.Action("Index", "UserRole")">UserRoles</a></li>
+            <li><a href="@Url.Action("Index", "")">UserRights</a></li>
+            <li><a href="@Url.Action("Index", "")">RoleRights</a></li>
+        </ul>
+        <ul class="nav navbar-nav">
+            <li><a href="@Url.Action("Login", "User")">Log In</a></li>
+            <li><a href="@Url.Action("Register", "User")">Register</a></li>
+            <li><a href="@Url.Action("Logout", "User")">Log Out</a></li>
+        </ul>        
     </div>
 </nav>
