--- a/Quiz.Mvc/Views/Answer/Index.cshtml
+++ b/Quiz.Mvc/Views/Answer/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<QuizData.AnswerSummary>
+@model IEnumerable<QuizMvc.Models.AnswerData>
 @{
     ViewData["Title"] = "Answers";
     Layout = "_Layout";
