--- a/Quiz.Mvc/Views/Question/EditQuestion.cshtml
+++ b/Quiz.Mvc/Views/Question/EditQuestion.cshtml
@@ -1,4 +1,6 @@
-@model QuizData.Question
+@model QuizMvc.Models.QuestionData
+@using System.Collections
+
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
@@ -6,18 +8,33 @@
 
 <form asp-action="@(ViewBag.CreateMode ? "Create" : "Edit")" method="post">
     <div class="form-group">
-        <label asp-for="QuizID"></label>
-        <input asp-for="QuizID" class="form-control" />
-        <label asp-for="QuizThemeID"></label>
-        <input asp-for="QuizThemeID" class="form-control" />
-        <label asp-for="AnswerTypeID"></label>
-        <input asp-for="AnswerTypeID" class="form-control" />
-        <label asp-for="QuestionTypeID"></label>
-        <input asp-for="QuestionTypeID" class="form-control" />
-        <label asp-for="QuestionImage"></label>
-        <input asp-for="QuestionImage" class="form-control" />
-        <label asp-for="CorrectAnswer"></label>
-        <input asp-for="CorrectAnswer" class="form-control" />
+        <label for="sel1">Quiz Name</label>
+        <select class="form-control" asp-for="QuizID" asp-items="@(new SelectList((IEnumerable)ViewData["Quizes"], "ID", "QuizName"))"></select>
+               
+        <br/>
+        
+        <label for="sel1">Quiz Theme Name</label>
+        <select class="form-control" asp-for="QuizThemeID" asp-items="@(new SelectList((IEnumerable)ViewData["QuizThemes"], "ID", "QuizThemeName"))"></select>
+               
+        <br/>
+
+        <label for="sel1">Answer Type Name</label>
+        <select class="form-control" asp-for="AnswerTypeID" asp-items="@(new SelectList((IEnumerable)ViewData["AnswerTypes"], "ID", "AnswerTypeName"))"></select>
+               
+        <br/>
+        
+        <label for="sel1">Question Type Name</label>
+        <select class="form-control" asp-for="QuestionTypeID" asp-items="@(new SelectList((IEnumerable)ViewData["QuestionTypes"], "ID", "QuestionTypeName"))"></select>
+               
+        <br/>
+
+        <label for="sel1">Question Image</label>
+        <input asp-for="QuestionImage" class="form-control"/>
+        
+        <br/>
+        
+        <label for="sel1">Correct Answer</label>
+        <input asp-for="CorrectAnswer" class="form-control"/>
     </div>
     <div class="text-center">
         <button class="btn btn-primary" type="submit">Save</button>
