--- a/Quiz.Mvc/Views/QuestionType/EditQuestionType.cshtml
+++ b/Quiz.Mvc/Views/QuestionType/EditQuestionType.cshtml
@@ -1,4 +1,6 @@
-@model QuizData.QuestionType
+@using System.Collections
+@model QuizMvc.Models.QuestionTypeData
+
 @{
     ViewData["Title"] = ViewBag.CreateMode ? "Create" : "Edit";
     Layout = "_Layout";
@@ -6,9 +8,12 @@
 
 <form asp-action="@(ViewBag.CreateMode ? "Create" : "Edit")" method="post">
     <div class="form-group">
-        <label asp-for="QuizID"></label>
-        <input asp-for="QuizID" class="form-control" />
-        <label asp-for="QuestionTypeName"></label>
+        <label for="sel1">Quiz Name</label>
+        <select class="form-control" asp-for="QuizID" asp-items="@(new SelectList((IEnumerable)ViewData["Quizes"], "ID", "QuizName"))"></select>
+               
+        <br/>
+               
+        <label for="sel2">Question Type Name</label>
         <input asp-for="QuestionTypeName" class="form-control" />
     </div>
     <div class="text-center">
