--- a/Quiz.Mvc/Views/Home/Index.cshtml
+++ b/Quiz.Mvc/Views/Home/Index.cshtml
@@ -14,12 +14,10 @@
         <ul class="nav navbar-nav">
             <li><a href="@Url.Action("Index", "User")">Users</a></li>
             <li><a href="@Url.Action("Index", "Role")">Roles</a></li>
-            <li><a href="@Url.Action("Index", "Right")">Rights</a></li>   
-        </ul>
-        <ul class="nav navbar-nav">
+            <li><a href="@Url.Action("Index", "Right")">Rights</a></li>  
             <li><a href="@Url.Action("Index", "UserRole")">UserRoles</a></li>
-            <li><a href="@Url.Action("Index", "")">UserRights</a></li>
-            <li><a href="@Url.Action("Index", "")">RoleRights</a></li>
+            <li><a href="@Url.Action("Index", "UserRight")">UserRights</a></li>
+            <li><a href="@Url.Action("Index", "RoleRight")">RoleRights</a></li>
         </ul>
         <ul class="nav navbar-nav">
             <li><a href="@Url.Action("Login", "User")">Log In</a></li>
