--- a/Quiz.Mvc/Views/AnswerType/EditAnswerType.cshtml
+++ b/Quiz.Mvc/Views/AnswerType/EditAnswerType.cshtml
@@ -7,12 +7,13 @@
     Layout = "_Layout";
 }
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="@Url.Content("~/Scripts/jquery.min.js")"></script>
 
 <script language="javascript" type="text/javascript">
-    
+ 
     function quizNameChange() {
         var quizID = $('#QuizName').val();
+        $("#QuestionTypeName").empty();
         $.ajax({
             url: '/QuestionType/GetQuestionTypesByQuiz',
             type: "GET",
@@ -20,32 +21,37 @@
             data: { QuizID: quizID },
             success: function (response) {
                 console.log(response);
-                $.each(response, function (quizID, questionTypeName) {
-                    $("#QuizName").append(
-                        $('<option></option>').val(quizID).html(questionTypeName));
+                $.each(response, function (index, item) {
+                    $("#QuestionTypeName").append($('<option/>', {
+                        value: item.id,
+                        text: item.questionTypeName
+                    }));
                 });
             }
         });
     }
     
-    
 </script>
 
-<form asp-action="@(ViewBag.CreateMode ? "Create" : "Edit")" method="post">
+@using (Html.BeginForm(ViewBag.CreateMode ? "Create" : "Edit", "AnswerType"))
+{
     <div class="form-group">
-        <label for="sel1">Quiz Name</label>             
-        @Html.DropDownList("QuizName",new SelectList((IEnumerable)ViewData["Quizes"], "ID", "QuizName"),new { @class = "form-control", onchange="quizNameChange()"})
+        <label for="sel1">Quiz Name</label>  
+        @Html.DropDownListFor(x => Model.QuizID, new SelectList((IEnumerable)ViewData["Quizes"], "ID", "QuizName"), new { @class = "form-control", onchange="quizNameChange()", @id = "QuizName"})
         
         <br/>
         <label for="sel1">Question Type Name</label>
-        @Html.DropDownList("QuizName",new SelectList((IEnumerable)ViewData["QuestionTypes"], "ID", "QuestionTypeName"),new { @class = "form-control"})              
+        @Html.DropDownListFor(x => Model.QuestionTypeID, new SelectList((IEnumerable)ViewData["QuestionTypes"], "ID", "QuestionTypeName"), new { @class = "form-control", @id = "QuestionTypeName"})            
         <br/>
 
         <label for="sel1">Answer Type Name</label>
         <input asp-for="AnswerTypeName" class="form-control"/>
     </div>
+    
     <div class="text-center">
         <button class="btn btn-primary" type="submit">Save</button>
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </div>
-</form>
+}
+
+
