--- a/Quiz.Mvc/Views/Question/Index.cshtml
+++ b/Quiz.Mvc/Views/Question/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <table class="table table-sm table-striped">
     <thead>
-    <tr><th>Quiz Name</th><th>Quiz Theme Name</th><th>Question Type Name</th><th>Answer Type Name</th><th>Question Name</th><th>Actions</th></tr>
+    <tr><th>Quiz Name</th><th>Quiz Theme Name</th><th>Question Type Name</th><th>Answer Type Name</th><th>Actions</th></tr>
     </thead>
     <tbody>
     @foreach (var question in Model) {
